okd-services/services/langfuse/manifests/11-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: langfuse
  namespace: langfuse
  labels:
    app.kubernetes.io/name: langfuse
spec:
  host: langfuse.apps.okd.cgraaaj.in
  to:
    kind: Service
    name: langfuse-web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
